--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "bot.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "forever": "^3.0.4",
     "node-fetch": "^2.6.1",
     "node-telegram-bot-api": "^0.51.0"
